--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
     "angular-bootstrap": "~0.11.0",
     "angular-ui-utils": "~0.1.1",
     "angular-ui-router": "~0.2.10",
-    "angular-wizard": "~0.4.0"
+    "angular-wizard": "~0.4.0",
+    "underscore": "~1.7.0"
   }
 }
