--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "express": "~4.7.2",
     "express-session": "~1.7.2",
     "forever": "~0.11.0",
+    "formidable": "^1.0.15",
+    "fs-extra": "^0.12.0",
     "glob": "~4.0.5",
     "grunt-cli": "~0.1.13",
     "helmet": "~0.4.0",
@@ -39,6 +41,7 @@
     "passport-local": "~1.0.0",
     "passport-twitter": "~1.0.2",
     "qr-image": "^2.0.0",
+    "quickthumb": "0.0.10",
     "swig": "~1.4.1"
   },
   "devDependencies": {
